Clean TezConfiguration (remove unused keys)