@@ -18,15 +18,8 @@
 
 package org.apache.tez.dag.api;
 
-import java.lang.reflect.Field;
-import java.util.HashMap;
-import java.util.Map;
-import java.util.Set;
-
 import org.apache.tez.common.annotation.ConfigurationClass;
 import org.apache.tez.common.annotation.ConfigurationProperty;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.yarn.api.records.LocalResource;
 
@@ -41,34 +34,6 @@ import org.apache.hadoop.yarn.api.records.LocalResource;
 public class TezConfiguration extends Configuration {
 
   public final static String TEZ_SITE_XML = "tez-site.xml";
-
-  private final static Logger LOG = LoggerFactory.getLogger(TezConfiguration.class);
-
-  private static Map<String, Scope> PropertyScope = new HashMap<String, Scope>();
-
-  static {
-    setupConfigurationScope(TezConfiguration.class);
-  }
-
-  static void setupConfigurationScope(Class<?> clazz) {
-    for (Field field : clazz.getFields()) {
-      if (field.isAnnotationPresent(ConfigurationScope.class)) {
-        ConfigurationScope confScope = field.getAnnotation(ConfigurationScope.class);
-        if (field.getType() == String.class) {
-          try {
-            PropertyScope.put(field.get(null).toString(), confScope.value());
-          } catch (IllegalArgumentException e) {
-            throw new RuntimeException(e);
-          } catch (IllegalAccessException e) {
-            throw new RuntimeException(e);
-          }
-        } else {
-          throw new RuntimeException(field.getName() + " is not String type, should not been annotated with "
-              + ConfigurationScope.class.getSimpleName());
-        }
-      }
-    }
-  }
 
   public TezConfiguration() {
     this(true);
@@ -100,6 +65,7 @@ public class TezConfiguration extends Configuration {
   public static final String TEZ_AM_SHUFFLE_AUXILIARY_SERVICE_ID_DEFAULT =
       TezConstants.TEZ_SHUFFLE_HANDLER_SERVICE_ID;
 
+  // read in Hive
   /**
    * String value. Specifies a directory where Tez can create temporary job artifacts.
    */
@@ -109,17 +75,7 @@ public class TezConfiguration extends Configuration {
   public static final String TEZ_AM_STAGING_DIR_DEFAULT = "/tmp/"
       + System.getProperty("user.name") + "/tez/staging";
 
-  /**
-   * String value. Command line options provided during the launch of the Tez
-   * AppMaster process. Its recommended to not set any Xmx or Xms in these launch opts so that
-   * Tez can determine them automatically.
-   * */
-  @ConfigurationScope(Scope.AM)
-  @ConfigurationProperty
-  public static final String TEZ_AM_LAUNCH_CMD_OPTS = TEZ_AM_PREFIX +  "launch.cmd-opts";
-  public static final String TEZ_AM_LAUNCH_CMD_OPTS_DEFAULT = 
-      "-XX:+PrintGCDetails -verbose:gc -XX:+PrintGCTimeStamps -XX:+UseNUMA -XX:+UseParallelGC";
-
+  // read in Hive
   /** String value. Env settings for the Tez AppMaster process.
    * Should be specified as a comma-separated of key-value pairs where each pair
    * is defined as KEY=VAL
@@ -130,76 +86,27 @@ public class TezConfiguration extends Configuration {
    */
   @ConfigurationScope(Scope.AM)
   @ConfigurationProperty
-  public static final String TEZ_AM_LAUNCH_ENV = TEZ_AM_PREFIX
-      + "launch.env";
+  public static final String TEZ_AM_LAUNCH_ENV = TEZ_AM_PREFIX + "launch.env";
   public static final String TEZ_AM_LAUNCH_ENV_DEFAULT = "";
 
-  /**
-   * Int value. The number of threads used to listen to task heartbeat requests.
-   * Expert level setting.
-   */
-  @ConfigurationScope(Scope.AM)
-  @ConfigurationProperty(type="integer")
-  public static final String TEZ_AM_TASK_LISTENER_THREAD_COUNT =
-      TEZ_AM_PREFIX + "task.listener.thread-count";
-  public static final int TEZ_AM_TASK_LISTENER_THREAD_COUNT_DEFAULT = 30;
-
-  /**
-   * Int value. Specifies the number of times the app master can be launched in order to recover 
-   * from app master failure. Typically app master failures are non-recoverable. This parameter 
-   * is for cases where the app master is not at fault but is lost due to system errors.
-   * Expert level setting.
-   */
-  @ConfigurationScope(Scope.AM)
-  @ConfigurationProperty(type="integer")
-  public static final String TEZ_AM_MAX_APP_ATTEMPTS = TEZ_AM_PREFIX +
-      "max.app.attempts";
-  public static final int TEZ_AM_MAX_APP_ATTEMPTS_DEFAULT = 2;
-
-  /**
-   * Boolean value. Enabled blacklisting of nodes of nodes that are considered faulty. These nodes 
-   * will not be used to execute tasks.
-   */
-  @ConfigurationScope(Scope.AM)
-  @ConfigurationProperty(type="boolean")
-  public static final String TEZ_AM_NODE_BLACKLISTING_ENABLED = TEZ_AM_PREFIX
-      + "node-blacklisting.enabled";
-  public static final boolean TEZ_AM_NODE_BLACKLISTING_ENABLED_DEFAULT = true;
-  
-  /**
-   * String value. Range of ports that the AM can use when binding for task connections. Leave blank
-   * to use all possible ports. Expert level setting. It's hadoop standard range configuration.
-   * For example 50000-50050,50100-50200
-   */
-  @ConfigurationScope(Scope.AM)
-  public static final String TEZ_AM_TASK_AM_PORT_RANGE =
-      TEZ_AM_PREFIX + "task.am.port-range";
-
+  // used in UtilsForConfTez.scala, MR3
   /** Int value. The amount of memory in MB to be used by the AppMaster */
   @ConfigurationScope(Scope.AM)
   @ConfigurationProperty(type="integer")
   // do not remove because MR3 test code (UtilsForConfTez) uses it
-  public static final String TEZ_AM_RESOURCE_MEMORY_MB = TEZ_AM_PREFIX
-      + "resource.memory.mb";
+  public static final String TEZ_AM_RESOURCE_MEMORY_MB = TEZ_AM_PREFIX + "resource.memory.mb";
   public static final int TEZ_AM_RESOURCE_MEMORY_MB_DEFAULT = 1024;
 
-  /** Int value. The number of virtual cores to be used by the app master */
-  @ConfigurationScope(Scope.AM)
-  @ConfigurationProperty(type="integer")
-  public static final String TEZ_AM_RESOURCE_CPU_VCORES = TEZ_AM_PREFIX
-      + "resource.cpu.vcores";
-  public static final int TEZ_AM_RESOURCE_CPU_VCORES_DEFAULT = 1;
-
-  // used in UtilsForConfTez.scala, MR3 
+  // used in UtilsForConfTez.scala, MR3
   /** Int value. The amount of memory in MB to be used by tasks. This applies to all tasks across
    * all vertices. Setting it to the same value for all tasks is helpful for container reuse and 
    * thus good for performance typically. */
-  @ConfigurationScope(Scope.DAG)  // TODO vertex level
+  @ConfigurationScope(Scope.DAG)
   @ConfigurationProperty(type="integer")
-  public static final String TEZ_TASK_RESOURCE_MEMORY_MB = TEZ_TASK_PREFIX
-      + "resource.memory.mb";
+  public static final String TEZ_TASK_RESOURCE_MEMORY_MB = TEZ_TASK_PREFIX + "resource.memory.mb";
   public static final int TEZ_TASK_RESOURCE_MEMORY_MB_DEFAULT = 1024;
 
+  // read in Hive
   /**
    * Int value. The maximum heartbeat interval, in milliseconds, between the app master and tasks.
    * Increasing this can help improve app master scalability for a large number of concurrent tasks.
@@ -211,6 +118,7 @@ public class TezConfiguration extends Configuration {
       + "am.heartbeat.interval-ms.max";
   public static final int TEZ_TASK_AM_HEARTBEAT_INTERVAL_MS_DEFAULT = 100;
 
+  // read in Hive
   /**
    * Int value. Interval, in milliseconds, after which counters are sent to AM in heartbeat from
    * tasks. This reduces the amount of network traffice between AM and tasks to send high-volume
@@ -223,6 +131,7 @@ public class TezConfiguration extends Configuration {
   public static final int TEZ_TASK_AM_HEARTBEAT_COUNTER_INTERVAL_MS_DEFAULT =
       4000;
 
+  // read in Hive
   /**
    * Int value. Maximum number of events to fetch from the AM by the tasks in a single heartbeat.
    * Expert level setting. Expert level setting.
@@ -289,6 +198,7 @@ public class TezConfiguration extends Configuration {
   public static final String TEZ_TASK_SCALE_MEMORY_WEIGHTED_RATIOS =
       TEZ_TASK_PREFIX + "scale.memory.ratios";
 
+  // read in Hive
   /**
    * Int value. The minimum number of containers that will be held in session mode. Not active in 
    * non-session mode. Enables an idle session (not running any DAG) to hold on to a minimum number
@@ -300,6 +210,7 @@ public class TezConfiguration extends Configuration {
       TEZ_AM_PREFIX + "session.min.held-containers";
   public static final int TEZ_AM_SESSION_MIN_HELD_CONTAINERS_DEFAULT = 0;
 
+  // read in Hive
   /**
    * String value to a file path.
    * The location of the Tez libraries which will be localized for DAGs.
@@ -325,22 +236,7 @@ public class TezConfiguration extends Configuration {
   @ConfigurationProperty
   public static final String TEZ_LIB_URIS = TEZ_PREFIX + "lib.uris";
 
-  /**
-   * Auxiliary resources to be localized for the Tez AM and all its containers.
-   *
-   * Value is comma-separated list of fully-resolved directories or file paths. All resources
-   * are made available into the working directory of the AM and/or containers i.e. $CWD.
-   *
-   * If directories are specified, they are not traversed recursively. Only files directly under the
-   * specified directory are localized.
-   *
-   * All duplicate resources are ignored.
-   *
-   */
-  @ConfigurationScope(Scope.AM)
-  @ConfigurationProperty
-  public static final String TEZ_AUX_URIS = TEZ_PREFIX + "aux.uris";
-
+  // read in Hive
   /**
    * Boolean value. Allows to ignore 'tez.lib.uris'. Useful during development as well as 
    * raw Tez application where classpath is propagated with application
@@ -350,17 +246,7 @@ public class TezConfiguration extends Configuration {
   @ConfigurationProperty(type="boolean")
   public static final String TEZ_IGNORE_LIB_URIS = TEZ_PREFIX + "ignore.lib.uris";
 
-  /**
-   * Boolean value.
-   * Specify whether hadoop libraries required to run Tez should be the ones deployed on the cluster.
-   * This is disabled by default - with the expectation being that tez.lib.uris has a complete
-   * tez-deployment which contains the hadoop libraries.
-   */
-  @ConfigurationScope(Scope.AM)
-  @ConfigurationProperty(type="boolean")
-  public static final String TEZ_USE_CLUSTER_HADOOP_LIBS = TEZ_PREFIX + "use.cluster.hadoop-libs";
-  public static final boolean TEZ_USE_CLUSTER_HADOOP_LIBS_DEFAULT = false;
-
+  // read in Hive
   /**
    * String value. The queue name for all jobs being submitted from a given client.
    */
@@ -368,6 +254,7 @@ public class TezConfiguration extends Configuration {
   @ConfigurationProperty
   public static final String TEZ_QUEUE_NAME = TEZ_PREFIX + "queue.name";
 
+  // read in Hive
   /**
    * String value. Tags for the job that will be passed to YARN at submission
    * time. Queries to YARN for applications can filter on these tags.
@@ -376,51 +263,18 @@ public class TezConfiguration extends Configuration {
   @ConfigurationProperty
   public static final String TEZ_APPLICATION_TAGS = TEZ_PREFIX + "application.tags";
 
+  // read in Hive
   /**
-   * Enum value. Config to limit the type of events published to the history logging service.
-   * The valid log levels are defined in the enum {@link HistoryLogLevel}. The default value is
-   * defined in {@link HistoryLogLevel#DEFAULT}.
-   */
-  @ConfigurationScope(Scope.DAG)
-  @ConfigurationProperty
-  public static final String TEZ_HISTORY_LOGGING_LOGLEVEL =
-      TEZ_PREFIX + "history.logging.log.level";
-
-  /**
-   *  Boolean value. Enable local mode execution in Tez. Enables tasks to run in the same process as
+   *  Boolean value. Enable local mode execution in Tez. Enables tasks to run in the same
+process as
    *  the app master. Primarily used for debugging.
    */
   @ConfigurationScope(Scope.AM)
   @ConfigurationProperty(type="boolean")
-  public static final String TEZ_LOCAL_MODE =
-    TEZ_PREFIX + "local.mode";
-
+  public static final String TEZ_LOCAL_MODE = TEZ_PREFIX + "local.mode";
   public static final boolean TEZ_LOCAL_MODE_DEFAULT = false;
 
-  // ACLs related configuration
-  // Format supports a comma-separated list of users and groups with the users and groups separated
-  // by whitespace. e.g. "user1,user2 group1,group2"
-  // All users/groups that have access to do operations on the AM also have access to similar
-  // operations on all DAGs within that AM/session.
-  // By default, the "owner" i.e. the user who started the session will always have full admin
-  // access to the AM. Also, the user that submitted the DAG has full admin access to all operations
-  // on that DAG.
-  //
-  // If no value is specified or an invalid configuration is specified,
-  // only the user who submitted the AM and/or DAG can do the appropriate operations.
-  // For example, "user1,user2 group1, group2" is an invalid configuration value as splitting by
-  // whitespace produces 3 lists instead of 2.
-
-  // If the value specified is "*", all users are allowed to do the operation.
-
-  /**
-   * Boolean value. Configuration to enable/disable ACL checks.
-   */
-  @ConfigurationScope(Scope.AM)
-  @ConfigurationProperty(type="boolean")
-  public static final String TEZ_AM_ACLS_ENABLED = TEZ_AM_PREFIX + "acls.enabled";
-  public static final boolean TEZ_AM_ACLS_ENABLED_DEFAULT = true;
-
+  // read in Hive
   /**
    * String value. 
    * AM view ACLs. This allows the specified users/groups to view the status of the AM and all DAGs
@@ -432,6 +286,7 @@ public class TezConfiguration extends Configuration {
   @ConfigurationProperty
   public static final String TEZ_AM_VIEW_ACLS = TEZ_AM_PREFIX + "view-acls";
 
+  // read in Hive
   /**
    * String value.
    * AM modify ACLs. This allows the specified users/groups to run modify operations on the AM
@@ -443,35 +298,6 @@ public class TezConfiguration extends Configuration {
   @ConfigurationProperty
   public static final String TEZ_AM_MODIFY_ACLS = TEZ_AM_PREFIX + "modify-acls";
 
-  // TODO only validate property here, value can also be validated if necessary
-  public static void validateProperty(String property, Scope usedScope) {
-    Scope validScope = PropertyScope.get(property);
-    if (validScope == null) {
-      if (LOG.isDebugEnabled()) {
-        LOG.debug(property + " is not standard configuration property of tez, can not been validated");
-      }
-    } else {
-      if (usedScope.ordinal() > validScope.ordinal()) {
-        throw new IllegalStateException(property + " is set at the scope of " + usedScope
-            + ", but it is only valid in the scope of " + validScope);
-      }
-    }
-  }
-
-  static Set<String> getPropertySet() {
-    return PropertyScope.keySet();
-  }
-
-  /**
-   * Long value.
-   * Time to wait (in seconds) for apps to complete on MiniTezCluster shutdown.
-   */
-  @ConfigurationScope(Scope.TEST)
-  @ConfigurationProperty(type="long")
-  public static final String TEZ_TEST_MINI_CLUSTER_APP_WAIT_ON_SHUTDOWN_SECS =
-      TEZ_PREFIX + "test.minicluster.app.wait.on.shutdown.secs";
-  public static final long TEZ_TEST_MINI_CLUSTER_APP_WAIT_ON_SHUTDOWN_SECS_DEFAULT = 30;
-
   /**
    *  Comma-separated list of properties that MRReaderMapred should return (if present) when calling for config updates.
    */
@@ -479,4 +305,7 @@ public class TezConfiguration extends Configuration {
   @ConfigurationProperty
   public static final String TEZ_MRREADER_CONFIG_UPDATE_PROPERTIES = "tez.mrreader.config.update.properties";
 
+  public static void validateProperty(String property, Scope usedScope) {
+    // unused in MR3
+  }
 }
